# Training

./: LICENSE  README.md
Rust_Task/grpc_server/: Cargo.toml  build.rs
Rust_Task/grpc_server/json_data/: ExecutivesData.json  StudentData.json
Rust_Task/grpc_server/proto/: employee.proto  executive.proto  student.proto
Rust_Task/grpc_server/src/: main.rs
Rust_Task/grpc_server/src/employees/: mod.rs  model.rs  service.rs
Rust_Task/grpc_server/src/executives/: mod.rs  model.rs  service.rs
Rust_Task/grpc_server/src/students/: mod.rs  model.rs  service.rs
Rust_Task/my-project/: Cargo.toml
Rust_Task/my-project/json_data/AxumData/: EmployeeData.json  StudentData.json
Rust_Task/my-project/json_data/EmployeeData/: Employee.json
Rust_Task/my-project/json_data/EmployeeData/employee_hashmap/: jr_emp_hashmap.json  (+3 more)
Rust_Task/my-project/json_data/NewTableData/: updated_table_json.json
Rust_Task/my-project/json_data/ThreadData/: SkillData
Rust_Task/my-project/src/: main.rs
Rust_Task/my-project/src/area/: mod.rs
Rust_Task/my-project/src/axum_task/: mod.rs
Rust_Task/my-project/src/common/: mod.rs
Rust_Task/my-project/src/employee/: mod.rs
Rust_Task/my-project/src/employee_with_hashmap/: mod.rs
Rust_Task/my-project/src/new_table/: mod.rs
Rust_Task/my-project/src/string_task/: frequency.rs  mod.rs  replacing.rs
Rust_Task/my-project/src/student/: mod.rs
Rust_Task/my-project/src/student_with_hashmap/: mod.rs
Rust_Task/my-project/src/table/: mod.rs
Rust_Task/my-project/src/thread_task1/: mod.rs
Rust_Task/my-project/src/thread_task2/: mod.rs
(+52 files in other folders)
