[package]
name = "grpc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
tonic = "0.10"
prost = "0.12"
serde_json ="1.0.111"
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.0", features = ["macros","rt-multi-thread"]}

[build-dependencies]
tonic-build = "0.10"