[package]
name = "my-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
lazy_static = "1.4"
rand = "0.8.5"
chrono = "0.4.33"
tokio = { version = "1.0", features = ["full"] }
axum = {version = "0.6.20", features = ["headers"]}
hyper = "0.14.28"
tower-http = { version = "0.3.0", features = ["cors", "trace"] }
tower = { version = "0.4.13", features = ["full"]}